@@ -3877,6 +3877,18 @@ SCIP_RETCODE SCIPlpiSetRealpar(
    return SCIP_OKAY;
 }
 
+/** interrupts the currently ongoing lp solve or disables the interrupt */
+SCIP_RETCODE SCIPlpiInterrupt(
+   SCIP_LPI*             lpi,                /**< LP interface structure */
+   SCIP_Bool             interrupt           /**< TRUE if interrupt should be set, FALSE if it should be disabled */
+   )
+{
+   /*lint --e{715}*/
+   assert(lpi != NULL);
+
+   return SCIP_OKAY;
+}
+
 /**@} */
 
 
